# mwaa-airflow

./: .eslintrc  .gitignore  README.md  biome.json  cdk.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  ci.yml
dags/: lambda_dag.py  test_lambda_dag.py
lib/: dag-stack.ts  mwaa-airflow-stack.ts  mwaa-stack.ts  stacks.test.ts
lib/__snapshots__/: mwaa-airflow.test.ts.snap  stacks.test.ts.snap
src/: handler.py  test_index.py
test/: mwaa-airflow.test.ts  test_index.py  test_lambda.py  test_lambda_dag.py
test/__snapshots__/: mwaa-airflow.test.ts.snap
