[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.11"
apache-airflow = "2.9.2"
apache-airflow-providers-amazon = "8.24.0"
pendulum = "3.0.0"
connexion = "2.14.2"
flask-session = "0.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.1.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
