[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.11"
apache-airflow = "2.10.1"
apache-airflow-providers-amazon = "8.28.0"
pendulum = "3.0.0"
connexion = "2.14.2"
flask-session = "0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
